--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
-body{
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+body {
+    font-family: sans-serif;
+    
+}
+
+.container{
+    display: flex;
+    flex-direction: column;
+    max-width: 600px;
+    width: 100%;
+    justify-self: center;
+    padding: 20px;
+    border-radius: 8px;
 }
